--- a/Project/workspace/MapYou/res/layout/test.xml
+++ b/Project/workspace/MapYou/res/layout/test.xml
@@ -5,15 +5,39 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <Button
+    <android.widget.Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="42dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginLeft="67dp"
+        android:layout_marginTop="159dp"
         android:onClick="test"
-        android:text="TestConnection"  />
+        android:text="TestConnection" />
+
+    <EditText
+        android:id="@+id/nickname"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="41dp"
+        android:hint="Nickname"
+        android:textColor="#000000"
+        android:textSize="23sp"
+        android:width="200dp" />
+
+    <EditText
+        android:id="@+id/password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/button1"
+        android:layout_below="@+id/nickname"
+        android:layout_marginTop="26dp"
+        android:hint="Password"
+        android:textColor="#000000"
+        android:textSize="23sp"
+        android:width="200dp" />
 
 </RelativeLayout>
