--- a/Project/workspace/MapYou/res/layout/forgot.xml
+++ b/Project/workspace/MapYou/res/layout/forgot.xml
@@ -8,53 +8,103 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="15dp"
         android:orientation="vertical" >
 
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="138dp"
-            android:layout_height="109dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="30dp"
-            android:src="@drawable/logo2" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:layout_weight="0.29" >
 
-        <TextView
-            android:id="@+id/welcomeTextView_login"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="35dp"
+                android:gravity="center"
+                android:text="@string/Menu"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="45sp" />
+
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="115dp"
+                android:layout_height="92dp"
+                android:layout_marginTop="20dp"
+                android:src="@drawable/logo2" />
+        </LinearLayout>
+        
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="30dp"
-            android:text="@string/forgotP"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="20sp" />
+            android:layout_marginTop="25dp"
+            android:orientation="vertical" >
 
-        <EditText
-            android:id="@+id/email_forgot"
-            android:layout_width="180dp"
-            android:layout_height="35dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="30dp"
-            android:layout_weight="0.09"
-            android:background="@color/LightBlue"
-            android:ems="10"
-            android:gravity="center"
-            android:hint="@string/email"
-            android:inputType="textEmailAddress|textPersonName" >
+            <TextView
+                android:id="@+id/welcomeTextView_login"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="30dp"
+                android:layout_weight="0.03"
+                android:text="@string/forgotP"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="20sp" />
 
-            <requestFocus />
-        </EditText>
+            <EditText
+                android:id="@+id/email_forgot"
+                android:layout_width="230dp"
+                android:layout_height="45dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="30dp"
+                android:layout_weight="0.03"
+                android:background="@color/LightBlue"
+                android:ems="10"
+                android:gravity="center"
+                android:hint="@string/email"
+                android:inputType="textEmailAddress|textPersonName" />
 
-        <ImageView
-            android:id="@+id/button_forgot"
-            android:layout_width="wrap_content"
-            android:layout_height="53dp"
-            android:layout_gravity="center"
-            android:layout_marginRight="10dp"
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <ImageView
+                android:id="@+id/button_forgot"
+                android:layout_width="66dp"
+                android:layout_height="53dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="55dp"
+                android:layout_weight="0.08"
+                android:clickable="true"
+                android:onClick="f"
+                android:src="@drawable/login" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:layout_weight="0.29"
-            android:clickable="true"
-            android:onClick="login"
-            android:src="@drawable/login" />
+            android:gravity="center" >
+
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/Help"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:onClick="helpForgot"
+                android:clickable="true" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
