--- a/Project/workspace/MapYou/res/layout/login.xml
+++ b/Project/workspace/MapYou/res/layout/login.xml
@@ -10,21 +10,37 @@
         android:layout_height="match_parent"
         android:orientation="vertical" >
 
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="152dp"
-            android:layout_height="120dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="30dp"
-            android:layout_weight="0.29"
-            android:src="@drawable/logo2" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.29" >
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="35dp"
+                android:gravity="center"
+                android:text="@string/Menu"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="45sp" />
+
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="115dp"
+                android:layout_height="92dp"
+                android:layout_marginTop="20dp"
+                android:src="@drawable/logo2" />
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/welcomeTextView_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="35dp"
             android:layout_weight="0.29"
             android:text="@string/login_name"
             android:textAppearance="?android:attr/textAppearanceLarge" />
@@ -123,7 +139,7 @@
                     android:layout_weight="0.12"
                     android:src="@drawable/forgot"
                     android:clickable="true"
-                    android:onClick="forgot" />
+                    android:onClick="forgotMapYou" />
 
             </LinearLayout>
 
