--- a/Project/workspace/MapYou/res/layout/mapme_menu.xml
+++ b/Project/workspace/MapYou/res/layout/mapme_menu.xml
@@ -7,21 +7,12 @@
     android:orientation="vertical" >
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="112dp"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal" >
-
-        <ImageView
-            android:id="@+id/ImageView01"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="40dp"
-            android:src="@drawable/logo2" />
+        android:layout_width="333dp"
+        android:layout_height="120dp"
+        android:layout_marginBottom="20dp" >
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/textView5"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
@@ -32,21 +23,19 @@
             android:textSize="45sp" />
 
         <ImageView
-            android:id="@+id/ImageView02"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="40dp"
+            android:id="@+id/imageView1"
+            android:layout_width="115dp"
+            android:layout_height="92dp"
+            android:layout_marginTop="20dp"
             android:src="@drawable/logo2" />
-
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_marginBottom="3dp"
-        android:layout_marginTop="15dp"
         android:orientation="horizontal" >
+        
 
         <Button
             android:id="@+id/button1"
