--- a/Project/workspace/MapYou/res/layout/registration.xml
+++ b/Project/workspace/MapYou/res/layout/registration.xml
@@ -10,13 +10,30 @@
         android:layout_height="match_parent"
         android:orientation="vertical" >
 
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="136dp"
-            android:layout_height="99dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="30dp"
-            android:src="@drawable/logo2" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:layout_weight="0.29" >
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="35dp"
+                android:gravity="center"
+                android:text="@string/Menu"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="45sp" />
+
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="115dp"
+                android:layout_height="92dp"
+                android:layout_marginTop="20dp"
+                android:src="@drawable/logo2" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/welcomeTextView_login"
@@ -88,10 +105,9 @@
             android:layout_gravity="center"
             android:layout_marginRight="10dp"
             android:layout_marginTop="30dp"
-            android:src="@drawable/login" 
             android:clickable="true"
-            android:onClick="register"/>
-
+            android:onClick="register"
+            android:src="@drawable/login" />
     </LinearLayout>
 
 </ScrollView>
