--- a/Project/workspace/MapYou/res/layout/face.xml
+++ b/Project/workspace/MapYou/res/layout/face.xml
@@ -18,4 +18,18 @@
         android:onClick="logout"
         android:text="Logout" />
 
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+         android:onClick="info"
+        android:text="Info" />
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        />
+
 </LinearLayout>
