--- a/Project/workspace/MapYou/res/layout/mapme_menu.xml
+++ b/Project/workspace/MapYou/res/layout/mapme_menu.xml
@@ -34,7 +34,8 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_marginBottom="3dp"
-        android:orientation="horizontal" >
+        android:orientation="horizontal" 
+        >
         
 
         <Button
@@ -46,6 +47,7 @@
             android:layout_weight="0.28"
             android:background="@color/LightBlue"
             android:text="@string/New_MapMe"
+            
             />
 
         <Button
@@ -60,21 +62,11 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="100dp"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="5dp"
         android:orientation="horizontal" >
-
-        <Button
-            android:id="@+id/Button02"
-            android:layout_width="156dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="3dp"
-            android:layout_marginRight="4dp"
-            android:background="@color/LightGreen"
-            android:text="@string/Send_Partecipation"
-            android:textSize="19sp" />
 
         <Button
             android:id="@+id/Button01"
@@ -88,32 +80,9 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <GridLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_gravity="center"
-        android:orientation="horizontal" >
-
-        <Button
-            android:id="@+id/Button03"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="3dp"
-            android:layout_marginRight="2dp"
-            android:layout_weight="0.11"
-            android:background="@color/LightBlue"
-            android:text="@string/Info"
-            android:textSize="19sp" />
-
-        <Button
-            android:id="@+id/Button04"
-            android:layout_width="170dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="3dp"
-            android:layout_marginRight="3dp"
-            android:background="@color/LightGreen"
-            android:text="@string/Help"
-            android:textSize="19sp" />
-    </LinearLayout>
+        android:layout_height="wrap_content" >
+    </GridLayout>
 
 </LinearLayout>
