--- a/Project/workspace/MapYou/res/layout/mapme_menu.xml
+++ b/Project/workspace/MapYou/res/layout/mapme_menu.xml
@@ -32,57 +32,44 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_marginBottom="3dp"
-        android:orientation="horizontal" 
-        >
-        
+        android:gravity="center"
+        android:orientation="vertical" >
 
         <Button
             android:id="@+id/button1"
-            android:layout_width="120dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="3dp"
-            android:layout_weight="0.28"
-            android:background="@color/LightBlue"
-            android:text="@string/New_MapMe"
-            
-            />
+            android:layout_width="200dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="10dp"
+            android:background="@color/LightGreen"
+            android:text="@string/New_MapMe" />
 
         <Button
             android:id="@+id/button2"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginRight="3dp"
-            android:layout_weight="0.22"
-            android:background="@color/LightGreen"
+            android:layout_width="200dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="25dp"
+            android:background="@color/LightBlue"
             android:text="@string/View_MapMe" />
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="5dp"
-        android:orientation="horizontal" >
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="200dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="25dp"
+            android:background="@color/LightGreen"
+            android:text="@string/Request_Partecipation" />
 
         <Button
-            android:id="@+id/Button01"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginRight="3dp"
-            android:layout_weight="0.22"
+            android:id="@+id/button4"
+            android:layout_width="200dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="25dp"
             android:background="@color/LightBlue"
-            android:text="@string/Request_Partecipation"
-            android:textSize="19sp" />
+            android:text="@string/logout" />
 
     </LinearLayout>
-
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-    </GridLayout>
 
 </LinearLayout>
