--- a/Project/workspace/MapYou/res/layout/new_map_me.xml
+++ b/Project/workspace/MapYou/res/layout/new_map_me.xml
@@ -34,20 +34,21 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="204dp"
+            android:layout_width="311dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="4dp"
+            android:gravity="center"
             android:orientation="horizontal" >
 
             <EditText
                 android:id="@+id/EditTextNameMapMe"
-                android:layout_width="wrap_content"
+                android:layout_width="254dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_weight="0.17"
+                android:layout_weight="1.29"
                 android:ems="10"
-                android:gravity="center"
+                android:gravity="left"
                 android:hint="name"
                 android:inputType="textPostalAddress" />
         </LinearLayout>
@@ -63,7 +64,7 @@
                 android:id="@+id/EditTextStartMapme"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.76"
+                android:layout_weight="0.56"
                 android:ems="10"
                 android:hint="start"
                 android:inputType="textPostalAddress" />
@@ -104,7 +105,6 @@
                 android:layout_marginRight="5dp"
                 android:background="@color/LightGreen"
                 android:onClick="dest"
-                
                 android:text="Set" />
         </LinearLayout>
 
@@ -140,14 +140,16 @@
 
             <Button
                 android:id="@+id/buttonSave"
-                android:layout_width="80dp"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="7dp"
+                android:layout_weight="2.84"
                 android:background="@color/LightGreen"
-                android:text="Settings" />
-
+                android:onClick="cleanMap"
+                android:text="Clean Map" />
         </LinearLayout>
+
     </LinearLayout>
 
 </ScrollView>
