--- a/Project/workspace/MapYou/res/layout/custom_drawer.xml
+++ b/Project/workspace/MapYou/res/layout/custom_drawer.xml
@@ -32,7 +32,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textViewStartLocation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/AliceBlue"
