--- a/Project/workspace/MapYou/res/layout/profile_facebook.xml
+++ b/Project/workspace/MapYou/res/layout/profile_facebook.xml
@@ -33,7 +33,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/textViewEndLocation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/LightBlue"
