--- a/Project/workspace/MapYou/res/layout/mapme_menu.xml
+++ b/Project/workspace/MapYou/res/layout/mapme_menu.xml
@@ -43,7 +43,7 @@
             android:layout_width="200dp"
             android:layout_height="60dp"
             android:layout_marginTop="10dp"
-            android:background="@color/LightGreen"
+            android:background="@drawable/mybuttongreen"
             android:text="@string/New_MapMe" />
 
         <Button
@@ -51,7 +51,7 @@
             android:layout_width="200dp"
             android:layout_height="60dp"
             android:layout_marginTop="25dp"
-            android:background="@color/LightBlue"
+            android:background="@drawable/button"
             android:text="@string/View_MapMe" />
 
         <Button
@@ -59,7 +59,7 @@
             android:layout_width="200dp"
             android:layout_height="60dp"
             android:layout_marginTop="25dp"
-            android:background="@color/LightGreen"
+            android:background="@drawable/mybuttongreen"
             android:text="@string/Request_Partecipation" />
 
         <Button
@@ -67,7 +67,7 @@
             android:layout_width="200dp"
             android:layout_height="60dp"
             android:layout_marginTop="25dp"
-            android:background="@color/LightBlue"
+            android:background="@drawable/button"
             android:text="@string/logout" />
 
     </LinearLayout>
