--- a/Project/workspace/MapYou/res/layout/registration.xml
+++ b/Project/workspace/MapYou/res/layout/registration.xml
@@ -13,15 +13,16 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:layout_weight="0.29" >
+            android:layout_marginBottom="10dp"
+            android:layout_weight="0.29"
+            android:orientation="vertical" >
 
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="180dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="35dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="15dp"
                 android:gravity="center"
                 android:text="@string/Menu"
                 android:textAppearance="?android:attr/textAppearanceLarge"
@@ -29,23 +30,12 @@
 
             <ImageView
                 android:id="@+id/imageView1"
-                android:layout_width="115dp"
-                android:layout_height="92dp"
+                android:layout_width="95dp"
+                android:layout_height="76dp"
+                android:layout_gravity="center"
                 android:layout_marginTop="20dp"
                 android:src="@drawable/logo2" />
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/welcomeTextView_login"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:layout_weight="0.29"
-            android:text="@string/Register_to_MapYou"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:clickable="true"
-            android:onClick="gcmm" />
 
         <EditText
             android:id="@+id/user_registration"
@@ -100,16 +90,20 @@
             android:hint="@string/email"
             android:inputType="textEmailAddress|textPassword" />
 
-        <ImageView
+        <Button
             android:id="@+id/button_register"
-            android:layout_width="48dp"
+            android:layout_width="89dp"
             android:layout_height="48dp"
             android:layout_gravity="center"
+            android:layout_marginLeft="5dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="30dp"
+            android:background="@drawable/button"
             android:clickable="true"
             android:onClick="register"
-            android:src="@drawable/login" />
+            android:src="@drawable/login"
+            android:text="Register" />
+
     </LinearLayout>
 
 </ScrollView>
