--- a/Project/workspace/MapYou/res/layout/dashboard.xml
+++ b/Project/workspace/MapYou/res/layout/dashboard.xml
@@ -3,7 +3,7 @@
     android:id="@+id/ScrollView1"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@android:color/white"
+    android:background="@color/LightBlue"
     android:fillViewport="true" >
 
     <GridView
@@ -11,7 +11,8 @@
         style="@style/dashboardPort"
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
-        android:background="@color/Khaki"
+        android:layout_marginTop="20dp"
+        android:background="@color/LightBlue"
         android:fastScrollEnabled="true"
         android:listSelector="@android:color/transparent"
         android:scrollbars="vertical"
