--- a/Project/workspace/MapYou/res/layout/dashboard.xml
+++ b/Project/workspace/MapYou/res/layout/dashboard.xml
@@ -2,7 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/FrameLayout1"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent"
+    android:background="@color/Azure" >
 
     <ScrollView
         android:id="@+id/frameL"
@@ -15,7 +16,7 @@
             style="@style/dashboardPort"
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
-            android:background="@color/LightBlue"
+            android:background="@color/GhostWhite"
             android:fastScrollEnabled="true"
             android:listSelector="@android:color/transparent"
             android:scrollbars="vertical"
