--- a/Project/workspace/MapYou/res/layout/dashboard_icon.xml
+++ b/Project/workspace/MapYou/res/layout/dashboard_icon.xml
@@ -10,7 +10,8 @@
     <ImageView
         android:id="@+id/dashboard_icon_img"
         android:layout_width="fill_parent"
-        android:layout_height="50dp"
+        android:layout_height="75dp"
+        android:layout_marginTop="25dp"
         android:scaleType="fitCenter" />
  
     <TextView
