--- a/Project/workspace/MapYou/res/layout/forgot.xml
+++ b/Project/workspace/MapYou/res/layout/forgot.xml
@@ -14,34 +14,36 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:layout_weight="0.29" >
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_weight="0.29"
+            android:orientation="vertical" >
 
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="180dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="35dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="15dp"
                 android:gravity="center"
                 android:text="@string/Menu"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textSize="45sp" />
+                android:textSize="30sp" />
 
             <ImageView
                 android:id="@+id/imageView1"
-                android:layout_width="115dp"
-                android:layout_height="92dp"
-                android:layout_marginTop="20dp"
-                android:src="@drawable/logo2" />
+                android:layout_width="145dp"
+                android:layout_height="116dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:src="@drawable/mappp" />
+
         </LinearLayout>
-        
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="25dp"
             android:orientation="vertical" >
 
             <TextView
@@ -49,7 +51,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="30dp"
                 android:layout_weight="0.03"
                 android:text="@string/forgotP"
                 android:textAppearance="?android:attr/textAppearanceLarge"
@@ -62,28 +63,24 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="30dp"
                 android:layout_weight="0.03"
-                android:background="@color/LightBlue"
+                android:background="@color/LightGreen"
                 android:ems="10"
                 android:gravity="center"
                 android:hint="@string/email"
                 android:inputType="textEmailAddress|textPersonName" />
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-
-            <ImageView
+            <Button
                 android:id="@+id/button_forgot"
-                android:layout_width="66dp"
+                android:layout_width="110dp"
                 android:layout_height="53dp"
+                android:layout_gravity="center"
                 android:layout_marginRight="10dp"
-                android:layout_marginTop="55dp"
-                android:layout_weight="0.08"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/button"
                 android:clickable="true"
                 android:onClick="forgot"
-                android:src="@drawable/login" />
+                android:src="@drawable/login"
+                android:text="Forgot" />
 
         </LinearLayout>
 
