--- a/Project/workspace/MapYou/res/layout/send_partecipation_layout.xml
+++ b/Project/workspace/MapYou/res/layout/send_partecipation_layout.xml
@@ -20,7 +20,7 @@
             android:id="@+id/imageView1"
             android:layout_width="match_parent"
             android:layout_height="84dp"
-            android:src="@drawable/logo2" />
+            android:src="@drawable/mappp" />
     </LinearLayout>
 
     <LinearLayout
